jQuery added and working

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -9,8 +9,11 @@ and open the template in the editor.
         <title>jQuery</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
+        <script src="JS/script.js" async></script>
     </head>
     <body>
         <div>TODO write content</div>
+        <div id="start">Start</div>
     </body>
 </html>
