--- a/public_html/index.html
+++ b/public_html/index.html
@@ -13,7 +13,7 @@ and open the template in the editor.
         <script src="JS/script.js" async></script>
     </head>
     <body>
-        <div>TODO write content</div>
+        <div class="hidden">TODO write content</div>
         <div id="start">Start</div>
     </body>
 </html>
