jQuery added and working

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -15,5 +15,8 @@ and open the template in the editor.
     <body>
         <div class="hidden">TODO write content</div>
         <div id="start">Start</div>
+        <a href="www.sololearn.com">
+            Click here
+         </a> 
     </body>
 </html>
