--- a/public_html/index.html
+++ b/public_html/index.html
@@ -15,8 +15,9 @@ and open the template in the editor.
     <body>
         <div class="hidden">TODO write content</div>
         <div id="start">Start</div>
-        <a href="www.sololearn.com">
+        <a href="https://www.w3schools.com">
             Click here
-         </a> 
-    </body>
+         </a>
+        <br/>
+        <input type="text" id="name" value="Your Name"/>
 </html>
