--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,6 +11,7 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
         <script src="JS/script.js" async></script>
+        <link rel="stylesheet" type="text/css" href="CSS/style.css">
     </head>
     <body>
         <div class="hidden">TODO write content</div>
@@ -19,5 +20,7 @@ and open the template in the editor.
             Click here
          </a>
         <br/>
+        <p id="test">NEW AWSOME P</p>
+        <div class="newShit"></div>
         <input type="text" id="name" value="Your Name"/>
 </html>
